<resources>
    <string name="app_name">Inputer</string>
    <string name="action_settings">Settings</string>
    <string name="accessibility_service_description">accessibility_service_description</string>
    <string name="template_screen_on">Screen on. Volume %1$s percent.</string>
    <string name="template_screen_off">Screen off. Volume %1$s percent.</string>
    <string name="task_name">Task</string>
    <string name="task_complete_template">Task %1$s %2$s</string>
    <string name="task_complete">is complete</string>
    <string name="task_not_complete">is not complete</string>
    <string name="accessibility_custom_view">Accessibility/Custom View</string>
    <string name="accessibility_custom_view_instructions">
        1. Enable TalkBack (Settings -> Accessibility -> TalkBack).
        \n\n2. Enable Explore-by-Touch (Settings -> Accessibility -> Explore by Touch).
        \n\n3. Touch explore/poke the buttons.
    </string>
    <string name="accessibility_custom_on">On</string>
    <string name="accessibility_custom_off">Off</string>
        <string name="accessibility_query_window_instructions">
        1. Enable QueryBack (Settings -> Accessibility -> QueryBack).
        \n\n2. Enable Explore-by-Touch (Settings -> Accessibility -> Explore by Touch).
        \n\n3. Touch explore the list.
    </string>
    <string name="accessibility_query_window">Accessibility/Accessibility Node Querying</string>
    <string name="accessibility_query_window_label">QueryBack</string>
    <string name="accessibility_query_window_description">Task App Accessibility Service</string>
    <string name="accesses_data_permission_description">This app has permission to access phrases that you define in the Texpand app</string>
    <string name="accesses_data_permission_title">Accesses data in Texpand</string>
    <string name="add_exclusion">Add</string>
    <string name="adjust_transparency_dialog_title">Opacity level</string>
    <string name="am_pm_anchor">AM/PM</string>
    <string name="backing_up_data">Backing up...</string>
    <string name="backup">Backup</string>
    <string name="backupPhrases">Backup data</string>
    <string name="backup_completed">Backup completed</string>
    <string name="backup_completed_with_duplicates_ignored">Backup completed, duplicates ignored</string>
    <string name="circle_image_view">CircleImageView</string>
    <string name="circle_image_view_link">https://github.com/hdodenhof/CircleImageView</string>
    <string name="clipboard_anchor">Clipboard</string>
    <string name="day_name_full_anchor">Day (full name)</string>
    <string name="day_name_short_anchor">Day (short name)</string>
    <string name="day_numeric_anchor">Day (numeric)</string>
    <string name="delete_phrase">Delete phrase</string>
    <string name="delete_phrase_dialog_message">Delete phrase?</string>
    <string name="description_field_hint">Description (Optional)</string>
    <string name="discard">Discard</string>
    <string name="empty_phrase_discarded">Empty phrase discarded</string>
    <string name="enable_accessibility_dialog_title">Required permission</string>
    <string name="enable_accessibility_service_message">Go to <b>Accessibility Settings</b> and enable Texpand to start text expansion</string>
    <string name="enjoying_texpand_title">Enjoying Texpand?</string>
    <string name="expands_immediately">Expands immediately</string>
    <string name="expands_within_words">Expands within words</string>
    <string name="feedback_email">isaias.matewos.developer@gmail.com</string>
    <string name="feedback_message_body" formatted="false">"Thank you for taking the time to send feedback. Please leave the information below intact as it is helpful to track bugs:

 Manufacturer: %s
 Model: %s
 Carrier: %s
 Android SDK VERSION: %d
 App version: %s

 ------- Type your message below -------"</string>
    <string name="feedback_subject">Texpand User Feedback</string>
    <string name="floating_action_button">Floating Action Button</string>
    <string name="floating_action_button_link">https://github.com/futuresimple/android-floating-action-button</string>
    <string name="got_it">Got it</string>
    <string name="hide_dynamic_values">Hide dynamic values</string>
    <string name="hour_12_anchor">Hours (12)</string>
    <string name="hour_24_anchor">Hours (24)</string>
    <string name="items_deleted">%d deleted</string>
    <string name="just_now">Just now</string>
    <string name="minute_anchor">Minutes</string>
    <string name="month_name_full_anchor">Month (full name)</string>
    <string name="month_name_short_anchor">Month (short name)</string>
    <string name="month_numeric_anchor">Month (numeric)</string>
    <string name="more">More</string>
    <string name="no">No</string>
    <string name="no_changes_made_message">No changes made</string>
    <string name="no_phrase_error_message">Empty phrase</string>
    <string name="no_shortcut_error_message">Empty shortcut</string>
    <string name="no_suggestions">No suggestions</string>
    <string name="not_applicable" />
    <string name="not_used_phraseRow">Not used yet</string>
    <string name="off">OFF</string>
    <string name="on">ON</string>
    <string name="open_settings">Open settings</string>
    <string name="open_source_dialog_title">Open Source Libraries</string>
    <string name="permission_group_title">Texpand</string>
    <string name="phrase_contains_shortcut_error_message">Phrase contains shortcut</string>
    <string name="phrase_field_hint">Phrase</string>
    <string name="phrase_saved_message">Saved</string>
    <string name="pref_about_category_title">About</string>
    <string name="pref_about_developer_key">about_dev_key</string>
    <string name="pref_about_developer_summary">Isaias Matewos</string>
    <string name="pref_about_developer_title">Developer</string>
    <string name="pref_about_feedback_key">Send feedback</string>
    <string name="pref_about_feedback_summary">Send bug reports or suggest ways to further improve this app</string>
    <string name="pref_about_feedback_title">Send feedback</string>
    <string name="pref_about_icon_design_key">pref_about_icon_design_key</string>
    <string name="pref_about_icon_design_summary">Erik C Olson (@erikdactyl)</string>
    <string name="pref_about_icon_design_title">Icon design</string>
    <string name="pref_about_open_source_licenses_key">open_sources_licenses_key</string>
    <string name="pref_about_open_source_licenses_summary">Open source libraries used in this app</string>
    <string name="pref_about_open_source_licenses_title">Open source licenses</string>
    <string name="pref_about_rate_app_key">about_rate_app_key</string>
    <string name="pref_about_rate_app_summary">Share your review on google play</string>
    <string name="pref_about_rate_app_title">Rate app</string>
    <string name="pref_about_special_thanks_summary">Dr. Amanuel M.Teweldebrhan</string>
    <string name="pref_about_special_thanks_title">Spacial thanks</string>
    <string name="pref_about_version_key">about_version_key</string>
    <string name="pref_about_version_summary">1.0.0</string>
    <string name="pref_about_version_title">Version</string>
    <string name="pref_add_space_after_expansion_key">add_space_after expansion_key</string>
    <string name="pref_add_space_after_expansion_summary_off">Space will not be added after phrase</string>
    <string name="pref_add_space_after_expansion_summary_on">Automatically adds space after phrase</string>
    <string name="pref_add_space_after_expansion_title">Add space after expansion</string>
    <string name="pref_attempt_to_preserve_cursor_position_key">pref_attempt_to_preserve_cursor_position_key</string>
    <string name="pref_attempt_to_preserve_cursor_position_summary_off">The cursor will always be repositioned to the end of the text</string>
    <string name="pref_attempt_to_preserve_cursor_position_summary_on">Will try to preserve cursor position when text is expanded in the middle. <b>This may cause unexpected behavior in some apps</b></string>
    <string name="pref_attempt_to_preserve_cursor_position_title">Attempt to preserve cursor position</string>
    <string name="pref_category_text_expansion_title">Text expansion</string>
    <string name="pref_enable_text_expansion_key">text_expansion_enabled_key</string>
    <string name="pref_exclude_apps_key">exclude_apps_key</string>
    <string name="pref_exclude_apps_summary">Add apps to exclude from text expansion</string>
    <string name="pref_exclude_apps_title">Exclude apps</string>
    <string name="pref_expand_after_entering_space_key">pref_expand_after_entering_space_key</string>
    <string name="pref_expand_after_entering_space_summary_off">Phrases with the option \"Expand Immediately\" enabled will expand immediately</string>
    <string name="pref_expand_after_entering_space_summary_on">Phrases with the option \"Expand Immediately\" enabled will require entering space to expand</string>
    <string name="pref_expand_after_entering_space_title">Expand after entering space</string>
    <string name="pref_faq_key">faq_key</string>
    <string name="pref_faq_summary">Get answers for common questions</string>
    <string name="pref_faq_title">FAQ</string>
    <string name="pref_follow_on_twitter_key">follow_on_twitter</string>
    <string name="pref_follow_on_twitter_summary">Ask questions and get tips</string>
    <string name="pref_follow_on_twitter_title">Follow @texpandapp on twitter</string>
    <string name="pref_grant_sys_alert_window_permission_key">pref_grant_sys_alert_window_permission_key</string>
    <string name="pref_grant_sys_alert_window_permission_summary_denied">Permission is denied. Floating indicator will be disabled.</string>
    <string name="pref_grant_sys_alert_window_permission_summary_granted">Permission is granted</string>
    <string name="pref_grant_sys_alert_window_permission_title">Grant \"Draw over other apps\" permission</string>
    <string name="pref_opacity_level_key">transparency_level_key</string>
    <string name="pref_opacity_level_summary">Adjust the opacity level of indicators</string>
    <string name="pref_shortcut_case_sensitive_key">case_sensitive_shortcut_key</string>
    <string name="pref_shortcut_case_sensitive_summary_off">Shortcut matching is not case sensitive</string>
    <string name="pref_shortcut_case_sensitive_summary_on">Shortcut matching is case sensitive</string>
    <string name="pref_shortcut_case_sensitive_title">Case sensitive shortcut</string>
    <string name="pref_show_suggestion_indicator_when_typing_key">show_floating_suggestion_indicator_key</string>
    <string name="pref_show_suggestion_indicator_when_typing_summary_off">Will not show floating suggestion indicator while typing</string>
    <string name="pref_show_suggestion_indicator_when_typing_summary_on">Will show floating suggestion indicator while typing</string>
    <string name="pref_show_suggestion_indicator_when_typing_title">Show floating indicator when typing</string>
    <string name="pref_show_undo_indicator_key">show_undo_indicator_key</string>
    <string name="pref_show_undo_indicator_summary_off">Will not show undo button after text expansion</string>
    <string name="pref_show_undo_indicator_summary_on">Will show undo button after text expansion</string>
    <string name="restorePhrases">Restore data</string>
    <string name="search_menu_title">Search</string>
    <string name="shortcut_field_hint">Shortcut</string>
    <string name="show_dynamic_values">Show dynamic values</string>
    <string name="sort_by_last_used_menu_title">By last used</string>
    <string name="sort_by_menu_title">Sort by</string>
    <string name="sort_by_phrase_menu_title">By phrase</string>
    <string name="sort_by_shortcut_menu_title">By shortcut name</string>
    <string name="sort_by_usage_count_menu_title">By usage count</string>
    <string name="sort_type_descending">Descending</string>
</resources>