<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings_white_24dp"
        android:orderInCategory="400"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
    <item
        android:id="@+id/backupPhrases"
        android:orderInCategory="500"
        android:title="@string/backupPhrases"
        app:showAsAction="never"/>
    <item
        android:id="@+id/restorePhrases"
        android:orderInCategory="600"
        android:title="@string/restorePhrases"
        app:showAsAction="never"/>

    <item
        android:id="@+id/debug_enter"
        android:orderInCategory="700"
        android:title="@string/debug_enter"
        app:showAsAction="never"/>
    <item
        android:id="@+id/sortType"
        android:icon="@drawable/ic_keyboard_arrow_down_white_24dp"
        android:orderInCategory="300"
        android:title="@string/sort_type_descending"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/search"
        android:actionViewClass="android.widget.SearchView"
        android:icon="@drawable/ic_search_white_24dp"
        android:orderInCategory="100"
        android:title="@string/search_menu_title"
        app:showAsAction="always|collapseActionView"/>
    <item
        android:id="@+id/sortBy"
        android:icon="@drawable/ic_sort_white_24dp"
        android:orderInCategory="200"
        android:title="@string/sort_by_menu_title"
        app:showAsAction="ifRoom">
        <menu>
            <group
                android:id="@+id/sortGroup"
                android:checkableBehavior="single"
                android:orderInCategory="200"
                android:visible="true">
                <item
                    android:id="@+id/sortByUsageCount"
                    android:checked="true"
                    android:title="@string/sort_by_usage_count_menu_title"
                    app:showAsAction="never"/>
                <item
                    android:id="@+id/sortByShortcut"
                    android:title="@string/sort_by_shortcut_menu_title"
                    app:showAsAction="never"/>
                <item
                    android:id="@+id/sortByPhrase"
                    android:title="@string/sort_by_phrase_menu_title"
                    app:showAsAction="never"/>
                <item
                    android:id="@+id/sortByLastUsed"
                    android:title="@string/sort_by_last_used_menu_title"
                    app:showAsAction="never"/>
            </group>
        </menu>
    </item>
</menu>